Fix gallery image cropping to show top of photos
Made-with: Cursor

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1239,6 +1239,7 @@ aside {
             width: 100%;
             height: 300px;
             object-fit: cover;
+            object-position: top;
             @include transition-all;
         }
         
